--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
           extend: {
             colors: {
               brand: {
-                burgundy: '#4a1016', // Approximate from logo
-                cream: '#f8f5f0',    // Light background
-                gold: '#c5a065',     // Accent
-                dark: '#1a1a1a'
+                burgundy: '#5D181E', // New Burgundy
+                cream: '#F7F3EC',    // New Cream
+                gold: '#c5a065',     // Accent (Unchanged)
+                lightGold: '#F0D59B', // Light Gold for hover effects
+                black: '#0A0A0A'     // New Black (replacing dark)
               }
             },
             fontFamily: {
@@ -30,18 +31,125 @@
     <style>
       /* Custom scrollbar for better aesthetics */
       ::-webkit-scrollbar {
-        width: 8px;
+        width: 12px;
       }
       ::-webkit-scrollbar-track {
-        background: #f1f1f1;
+        background: #F7F3EC;
       }
       ::-webkit-scrollbar-thumb {
-        background: #c5a065; 
-        border-radius: 4px;
+        background-color: #c5a065; 
+        border-radius: 9999px;
+        border: 4px solid transparent;
+        background-clip: content-box;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #4a1016; 
+        background-color: #5D181E; 
       }
+      
+      /* Effet métallique sophistiqué pour les boutons bordeaux */
+      .btn-burgundy {
+        position: relative;
+        isolation: isolate;
+        background-color: #5D181E;
+        color: white;
+        overflow: hidden;
+        transition: color 0.4s ease, box-shadow 0.4s ease, border-color 0.4s ease;
+      }
+      
+      /* Le fond métallique qui apparaît au survol */
+      .btn-burgundy::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(135deg, #5D181E 0%, #7A2229 30%, #9E2E39 50%, #7A2229 70%, #5D181E 100%);
+        opacity: 0;
+        z-index: -1;
+        transition: opacity 0.4s ease;
+      }
+
+      /* L'effet de réfraction (lumière) qui traverse le bouton */
+      .btn-burgundy::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -150%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          90deg, 
+          transparent, 
+          rgba(255, 255, 255, 0.2) 20%, 
+          rgba(255, 255, 255, 0.5) 50%, 
+          rgba(255, 255, 255, 0.2) 80%, 
+          transparent
+        );
+        transform: skewX(-20deg);
+        z-index: -1;
+        pointer-events: none;
+      }
+
+      /* Trigger au hover direct OU au hover du parent .group */
+      /* Modification : couleur or clair (#F0D59B) pour le texte */
+      /* Modification : Ombre Dark Gold (Bronze) pour plus de densité : rgba(140, 100, 40, 0.6) */
+      .btn-burgundy:hover,
+      .group:hover .btn-burgundy {
+        color: #F0D59B;
+        box-shadow: 0 20px 25px -5px rgba(140, 100, 40, 0.6), 0 8px 10px -6px rgba(140, 100, 40, 0.6);
+      }
+
+      .btn-burgundy:hover::before,
+      .group:hover .btn-burgundy::before {
+        opacity: 1;
+      }
+
+      .btn-burgundy:hover::after,
+      .group:hover .btn-burgundy::after {
+        left: 150%;
+        transition: left 0.7s ease-in-out;
+      }
+
+      /* Effet réfraction spécifique pour la Card Solution */
+      .card-solution-hover {
+        position: relative;
+        isolation: isolate;
+        /* background set by utility classes */
+      }
+      .card-solution-hover::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(135deg, #5D181E 0%, #7A2229 30%, #9E2E39 50%, #7A2229 70%, #5D181E 100%);
+        opacity: 0;
+        z-index: -1;
+        transition: opacity 0.4s ease;
+      }
+      .card-solution-hover::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -150%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          90deg, 
+          transparent, 
+          rgba(255, 255, 255, 0.2) 20%, 
+          rgba(255, 255, 255, 0.5) 50%, 
+          rgba(255, 255, 255, 0.2) 80%, 
+          transparent
+        );
+        transform: skewX(-20deg);
+        z-index: -1;
+        pointer-events: none;
+      }
+      .card-solution-hover:hover::before {
+        opacity: 1;
+      }
+      .card-solution-hover:hover::after {
+        left: 150%;
+        transition: left 0.7s ease-in-out;
+      }
+
       html {
         scroll-behavior: smooth;
       }
@@ -60,7 +168,7 @@
 }
 </script>
 </head>
-  <body class="bg-brand-cream text-brand-dark antialiased">
+  <body class="bg-brand-cream text-brand-black antialiased">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
