fix: Use .ico for favicon
Changes the favicon link from a .png to a .ico file. This ensures proper display across all browsers and devices.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Leadesia | Acquisition pour Avocats Fiscalistes</title>
     <meta name="description" content="Générez des dossiers qualifiés en contentieux fiscal. L'agence partenaire des avocats fiscalistes." />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
   </head>
   <body class="bg-brand-cream text-brand-black antialiased">
     <div id="root"></div>
