feat: Configure Vite for production and update dependencies
Introduces Vite's import maps for efficient dependency loading and removes the deprecated index.tsx file. Updates vercel.json for better routing. Adds a comment in App.tsx to guide custom route placement.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <title>Leadesia | Acquisition pour Avocats Fiscalistes</title>
     <meta name="description" content="Générez des dossiers qualifiés en contentieux fiscal. L'agence partenaire des avocats fiscalistes." />
     <link rel="icon" type="image/png" href="/favicon.ico" />
+  <script type="importmap">
+{
+  "imports": {
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react-swc": "https://esm.sh/@vitejs/plugin-react-swc@^4.2.2",
+    "path": "https://esm.sh/path@^0.12.7",
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
+    "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@^5.90.16",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "@eslint/js": "https://esm.sh/@eslint/js@^9.39.2",
+    "globals": "https://esm.sh/globals@^17.0.0",
+    "eslint-plugin-react-hooks": "https://esm.sh/eslint-plugin-react-hooks@^7.0.1",
+    "eslint-plugin-react-refresh": "https://esm.sh/eslint-plugin-react-refresh@^0.4.26",
+    "typescript-eslint": "https://esm.sh/typescript-eslint@^8.52.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "url": "https://esm.sh/url@^0.11.4"
+  }
+}
+</script>
 </head>
   <body class="bg-brand-cream text-brand-black antialiased">
     <div id="root"></div>
