feat(contact): integrate EmailJS for contact form submission
Adds EmailJS integration to the contact form component. This allows for direct submission of form data via email, replacing the previous simulated submission. Includes necessary dependencies, environment variable definitions, and form handling logic.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     "eslint-plugin-react-refresh": "https://esm.sh/eslint-plugin-react-refresh@^0.4.26",
     "typescript-eslint": "https://esm.sh/typescript-eslint@^8.52.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "url": "https://esm.sh/url@^0.11.4"
+    "url": "https://esm.sh/url@^0.11.4",
+    "@emailjs/browser": "https://esm.sh/@emailjs/browser@^4.4.1"
   }
 }
 </script>
