--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Canonical -->
     <link rel="canonical" href="https://leadesia.com" />
 
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
   <script type="importmap">
 {
   "imports": {
