--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Leadesia | Acquisition pour Avocats Fiscalistes" />
     <meta property="og:description" content="Générez des dossiers qualifiés en contentieux fiscal. L'agence d'acquisition partenaire des avocats fiscalistes. Leads qualifiés et exclusivité sectorielle." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://leadesia.com" />
+    <meta property="og:url" content="https://www.leadesia.com/" />
     <meta property="og:image" content="https://images.unsplash.com/photo-1521791136064-7986c2920216?q=80&w=1600&auto=format&fit=crop" />
 
     <!-- Twitter -->
@@ -24,7 +24,7 @@
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1521791136064-7986c2920216?q=80&w=1600&auto=format&fit=crop" />
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://leadesia.com" />
+    <link rel="canonical" href="https://www.leadesia.com/" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
   <script type="importmap">
