feat: Refine messaging for individual lawyers
Update website copy and meta tags to better target individual lawyers and their specific needs. Emphasize securing a consistent flow of qualified cases and highlight the benefits for solo practitioners.

--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
     <!-- Primary Meta Tags -->
-    <title>Leadesia | Avocat indépendant : Des dossiers réguliers</title>
-    <meta name="description" content="Avocat indépendant : Des dossiers réguliers. Fini l'activité en dents de scie. Leadesia vous apporte un flux prévisible de clients qualifiés grâce à la publicité ciblée. Audit gratuit." />
+    <title>Leadesia | Sécurisez votre flux de dossiers</title>
+    <meta name="description" content="Sécurisez votre flux de dossiers. Fini l'activité en dents de scie. Leadesia apporte aux cabinets individuels des clients qualifiés grâce à la publicité ciblée. Audit gratuit." />
     <meta name="author" content="Leadesia" />
     <meta name="keywords" content="avocat indépendant, développer clientèle avocat, acquisition client avocat, marketing pour avocat, trouver des clients avocat, prospection avocat, avocat à son compte" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Leadesia | Avocat indépendant : Des dossiers réguliers" />
-    <meta property="og:description" content="Avocat indépendant : Des dossiers réguliers. Fini l'activité en dents de scie. Leadesia vous apporte un flux prévisible de clients qualifiés." />
+    <meta property="og:title" content="Leadesia | Sécurisez votre flux de dossiers" />
+    <meta property="og:description" content="Sécurisez votre flux de dossiers. Fini l'activité en dents de scie. Leadesia apporte aux cabinets individuels des clients qualifiés." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.leadesia.com/" />
     <meta property="og:image" content="https://images.unsplash.com/photo-1521791136064-7986c2920216?q=80&w=1600&auto=format&fit=crop" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Leadesia | Avocat indépendant : Des dossiers réguliers" />
-    <meta name="twitter:description" content="Avocat indépendant : Des dossiers réguliers. Fini l'activité en dents de scie. Leadesia vous apporte un flux prévisible de clients qualifiés." />
+    <meta name="twitter:title" content="Leadesia | Sécurisez votre flux de dossiers" />
+    <meta name="twitter:description" content="Sécurisez votre flux de dossiers. Fini l'activité en dents de scie. Leadesia apporte aux cabinets individuels des clients qualifiés." />
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1521791136064-7986c2920216?q=80&w=1600&auto=format&fit=crop" />
 
     <!-- Canonical -->
